--- a/App Update Tool.ipynb
+++ b/App Update Tool.ipynb
@@ -6,80 +6,314 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "import re\n",
+    "import xlrd\n",
+    "import pandas as pd\n",
+    "import datetime as dt\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['currentYear', 'total_int', 'total_int_change', 'last_month_int', 'last_month_year_int', 'lastYear_month_int', 'lastYear_year_int', 'last_year_count_int', 'current_month_int', 'current_year_int', 'change_oil', 'oil', 'change_gas', 'gas', 'change_misc', 'misc', 'Offshore', 'Land', 'last_year_day', 'last_year_month', 'last_year', 'last_year_count_US', 'current_day_US', 'current_month_US', 'current_year_US', 'last_day', 'last_month', 'last_week_count', 'last_count_year', 'total_US', 'total_US_change', 'USchange_oil', 'USoil', 'USchange_gas', 'USgas', 'USchange_misc', 'USmisc', 'USOffshore', 'USLand', 'USHD', 'USVertical', 'rigMin', 'JanCount', 'FebCount', 'MarCount', 'AprCount', 'MayCount', 'JunCount', 'JulCount', 'AugCount', 'SepCount', 'OctCount', 'NovCount', 'DecCount']\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "wb_int = xlrd.open_workbook('International Rig Counts for Jun 2021.xlsx')\n",
+    "wb_us = xlrd.open_workbook('north_america_rotary_rig_count_jan_2000_-_current (13).xlsx')\n",
+    "LOS_int = wb_int.sheet_by_index(1)\n",
+    "OG_int = wb_int.sheet_by_index(2)\n",
+    "\n",
+    "LOS_us = wb_us.sheet_by_index(2)\n",
+    "OG_us = wb_us.sheet_by_index(3)\n",
+    "TRAJ_us = wb_us.sheet_by_index(4)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sign(change):\n",
+    "    if (change > 0) or (change == 0):\n",
+    "        change = '+'+str(change)\n",
+    "    return change\n",
+    "\n",
+    "def excel_date(date1):\n",
+    "    temp = (dt.datetime(1899, 12, 30)).date()    # Note, not 31st Dec but 30th!\n",
+    "    delta = date1 - temp\n",
+    "    return float(delta.days) + (float(delta.seconds) / 86400)\n",
+    "\n",
+    "def day(date):\n",
+    "    datetime = xlrd.xldate_as_datetime(date, 0)\n",
+    "    date_object = datetime.date()\n",
+    "    return date_object.day\n",
+    "\n",
+    "def month(date):\n",
+    "    datetime = xlrd.xldate_as_datetime(date, 0)\n",
+    "    date_object = datetime.date()\n",
+    "    return date_object.strftime(\"%B\")[0:3]\n",
+    "def year(date):\n",
+    "    datetime = xlrd.xldate_as_datetime(date, 0)\n",
+    "    date_object = datetime.date()\n",
+    "    return date_object.year\n",
+    "    \n",
+    "    \n",
+    "currentYear = datetime.now().year\n",
+    "\n",
+    "\n",
+    "Land_int = int(LOS_int.cell_value(-1,1))\n",
+    "OS_int = int(LOS_int.cell_value(-1,2))\n",
+    "Total_int = int(LOS_int.cell_value(-1,3))\n",
+    "Total_int_last = int(LOS_int.cell_value(-2,3))\n",
+    "Total_int_change = Total_int-Total_int_last\n",
+    "Total_int_change = sign(Total_int_change)\n",
+    "\n",
+    "Oil_int = int(OG_int.cell_value(-1,1))\n",
+    "Oil_int_last = int(OG_int.cell_value(-2,1))\n",
+    "Oil_int_change = Oil_int - Oil_int_last\n",
+    "Oil_int_change = sign(Oil_int_change)\n",
+    "\n",
+    "Gas_int = int(OG_int.cell_value(-1,2))\n",
+    "Gas_int_last = int(OG_int.cell_value(-2,2))\n",
+    "Gas_int_change = Gas_int - Gas_int_last\n",
+    "Gas_int_change = sign(Gas_int_change)\n",
+    "                   \n",
+    "Misc_int = int(OG_int.cell_value(-1,3))\n",
+    "Misc_int_last = int(OG_int.cell_value(-2,3))\n",
+    "Misc_int_change = Misc_int - Misc_int_last\n",
+    "Misc_int_change = sign(Misc_int_change)\n",
+    "\n",
+    "#international Dates\n",
+    "Last_month_int_date = OG_int.cell_value(-2,0)\n",
+    "Last_month_int = month(Last_month_int_date)\n",
+    "Last_month_year_int = year(Last_month_int_date)\n",
+    "#\n",
+    "lastYear_month_int_date = OG_int.cell_value(-13,0)\n",
+    "lastYear_month_int = month(lastYear_month_int_date)\n",
+    "lastYear_year_int = year(lastYear_month_int_date)\n",
+    "#\n",
+    "current_month_int_date = OG_int.cell_value(-1,0)\n",
+    "current_month_int = month(current_month_int_date)\n",
+    "current_year_int = year(current_month_int_date)\n",
+    "\n",
+    "#temporarily have the actual count in the count description (bug in Xcode)\n",
+    "last_year_month_change = int(LOS_us.cell_value(-53,60))\n",
+    "last_year_month_current = int(LOS_us.cell_value(-1,60))\n",
+    "last_year_month_change = last_year_month_current-last_year_month_change\n",
+    "last_year_month = sign(last_year_month_change)\n",
+    "\n",
+    "Last_year_count_int_last = int(OG_int.cell_value(-13,4))\n",
+    "Last_year_count_int = int(OG_int.cell_value(-1,4))\n",
+    "Last_year_count_int_change = Last_year_count_int-Last_year_count_int_last\n",
+    "Last_year_count_int = sign(Last_year_count_int_change)\n",
+    "\n",
+    "#US dates\n",
+    "current_day_US_date = OG_us.cell_value(-1,0)\n",
+    "current_day_US = day(current_day_US_date)\n",
+    "current_month_US = month(current_day_US_date)\n",
+    "current_year_US = year(current_day_US_date)\n",
+    "#\n",
+    "last_day_date = OG_us.cell_value(-2,0)\n",
+    "last_day = day(last_day_date)\n",
+    "last_month = month(last_day_date)\n",
+    "last_count_year = year(last_day_date)\n",
+    "\n",
+    "last_week_count_last = int(OG_us.cell_value(-2,4))\n",
+    "last_week_count = int(OG_us.cell_value(-1,4))\n",
+    "last_week_count_change = last_week_count-last_week_count_last\n",
+    "last_week_count = sign(last_week_count_change)\n",
+    "\n",
+    "\n",
+    "total_US = int(OG_us.cell_value(-1,4))\n",
+    "total_US_last =  int(OG_us.cell_value(-2,4))\n",
+    "total_US_change = total_US-total_US_last\n",
+    "total_US_change = sign(total_US_change)\n",
+    "\n",
+    "USoil = int(OG_us.cell_value(-1,1))\n",
+    "USoil_last = int(OG_us.cell_value(-2,1))\n",
+    "USchange_oil = USoil - USoil_last\n",
+    "USchange_oil = sign(USchange_oil)\n",
+    "\n",
+    "USgas = int(OG_us.cell_value(-1,2))\n",
+    "USgas_last = int(OG_us.cell_value(-2,2))\n",
+    "USchange_gas = USgas - USgas_last\n",
+    "USchange_gas = sign(USchange_gas)\n",
+    "\n",
+    "USmisc = int(OG_us.cell_value(-1,3))\n",
+    "USmisc_last = int(OG_us.cell_value(-2,3))\n",
+    "USchange_misc = USmisc - USmisc_last\n",
+    "USchange_misc = sign(USchange_misc)\n",
+    "\n",
+    "USLand = int(LOS_us.cell_value(-1,58))\n",
+    "USOffshore = int(LOS_us.cell_value(-1,59))\n",
+    "\n",
+    "USD = int(TRAJ_us.cell_value(-1,1))\n",
+    "USH = int(TRAJ_us.cell_value(-1,2))\n",
+    "USHD = USD + USH\n",
+    "USVertical = int(TRAJ_us.cell_value(-1,3))\n",
+    "\n",
+    "full_dates = OG_us.col_values(0)\n",
+    "dates = OG_us.col_values(0)[7:]\n",
+    "for i in range(0,len(dates)):\n",
+    "    datetime = xlrd.xldate_as_datetime(dates[i], 0)\n",
+    "    dates[i] = datetime.date()\n",
+    "dates = [item for item in dates if item.year == 2021]\n",
+    "available_dates = [item for item in dates if item.month < (datetime.now().month)]\n",
+    "\n",
+    "if [item for item in dates if item.month == 1] != []:\n",
+    "    JanCount_date = max([item for item in dates if item.month == 1])\n",
+    "    JanCount_index = full_dates.index(excel_date(JanCount_date))\n",
+    "    JanCount = OG_us.cell_value(JanCount_index,4)\n",
+    "else:\n",
+    "    JanCount_date = 0.0\n",
+    "    JanCount = 0.0\n",
+    "if [item for item in dates if item.month == 2] != []:\n",
+    "    FebCount_date = max([item for item in dates if item.month == 2])\n",
+    "    FebCount_index = full_dates.index(excel_date(FebCount_date))\n",
+    "    FebCount = OG_us.cell_value(FebCount_index,4)\n",
+    "else:\n",
+    "    FebCount_date = 0.0\n",
+    "    FebCount = 0.0\n",
+    "if [item for item in dates if item.month == 3] != []:\n",
+    "    MarCount_date = max([item for item in dates if item.month == 3])\n",
+    "    MarCount_index = full_dates.index(excel_date(MarCount_date))\n",
+    "    MarCount = OG_us.cell_value(MarCount_index,4)\n",
+    "else:\n",
+    "    MarCount_date = 0.0\n",
+    "    MarCount = 0.0\n",
+    "if [item for item in dates if item.month == 4] != []:\n",
+    "    AprCount_date = max([item for item in dates if item.month == 4])\n",
+    "    AprCount_index = full_dates.index(excel_date(AprCount_date))\n",
+    "    AprCount = OG_us.cell_value(AprCount_index,4)\n",
+    "else:\n",
+    "    AprCount_date = 0.0\n",
+    "    AprCount = 0.0\n",
+    "if [item for item in dates if item.month == 5] != []:\n",
+    "    MayCount_date = max([item for item in dates if item.month == 5])\n",
+    "    MayCount_index = full_dates.index(excel_date(MayCount_date))\n",
+    "    MayCount = OG_us.cell_value(MayCount_index,4)\n",
+    "else:\n",
+    "    MayCount_date = 0.0\n",
+    "    MayCount = 0.0\n",
+    "if [item for item in dates if item.month == 6] != []:\n",
+    "    JunCount_date = max([item for item in dates if item.month == 6])\n",
+    "    JunCount_index = full_dates.index(excel_date(JunCount_date))\n",
+    "    JunCount = OG_us.cell_value(JunCount_index,4)\n",
+    "else:\n",
+    "    JunCount_date = 0.\n",
+    "    JunCount = 0.0\n",
+    "if [item for item in dates if item.month == 7] != []:\n",
+    "    JulCount_date = max([item for item in dates if item.month == 7])\n",
+    "    JulCount_index = full_dates.index(excel_date(JulCount_date))\n",
+    "    JulCount = OG_us.cell_value(JulCount_index,4)\n",
+    "else:\n",
+    "    JulCount_date = 0.0\n",
+    "    JulCount = 0.0\n",
+    "if [item for item in dates if item.month == 8] != []:\n",
+    "    AugCount_date = max([item for item in dates if item.month == 8])\n",
+    "    AugCount_index = full_dates.index(excel_date(AugCount_date))\n",
+    "    AugCount = OG_us.cell_value(AugCount_index,4)\n",
+    "else:\n",
+    "    AugCount_date = 0.0\n",
+    "    AugCount = 0.0\n",
+    "if [item for item in dates if item.month == 9] != []:\n",
+    "    SepCount_date = max([item for item in dates if item.month == 9])\n",
+    "    SepCount_index = full_dates.index(excel_date(SepCount_date))\n",
+    "    SepCount = OG_us.cell_value(SepCount_index,4)\n",
+    "else:\n",
+    "    SepCount_date = 0.0\n",
+    "    SepCount = 0.0\n",
+    "if [item for item in dates if item.month == 10] != []:\n",
+    "    OctCount_date = max([item for item in dates if item.month == 10])\n",
+    "    OctCount_index = full_dates.index(excel_date(OctCount_date))\n",
+    "    OctCount = OG_us.cell_value(OctCount_index,4)\n",
+    "else:\n",
+    "    OctCount_date = 0.0\n",
+    "    OctCount = 0.0\n",
+    "if [item for item in dates if item.month == 11] != []:\n",
+    "    NovCount_date = max([item for item in dates if item.month == 11])\n",
+    "    NovCount_index = full_dates.index(excel_date(NovCount_date))\n",
+    "    NovCount = OG_us.cell_value(NovCount_index,4)\n",
+    "else:\n",
+    "    NovCount_date = 0.0\n",
+    "    NovCount = 0.0\n",
+    "if [item for item in dates if item.month == 12] != []:\n",
+    "    DecCount_date = max([item for item in dates if item.month == 12])\n",
+    "    DecCount_index = full_dates.index(excel_date(DecCount_date))\n",
+    "    DecCount = OG_us.cell_value(DecCount_index,4)\n",
+    "else:\n",
+    "    DecCount_date = 0.0\n",
+    "    DecCount = 0.0\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "file = open(\"7-4-2021.txt\",'r')\n",
     "array = file.readlines()                    #now a list of strings\n",
     "file.close()\n",
-    "items = {'currentYear':0,\n",
-    "         'total_int':0,\n",
-    "         'total_int_change':0,\n",
-    "         'last_month_int':0,\n",
-    "         'last_month_year_int':0,\n",
-    "        'lastYear_month_int':0,\n",
-    "        'lastYear_year_int':0,\n",
-    "        'last_year_count_int':0,\n",
-    "        'current_month_int':0,\n",
-    "        'current_year_int':0,\n",
-    "        'change_oil':0,\n",
-    "        'oil':0,\n",
-    "        'change_gas':0,\n",
-    "        'gas':0,\n",
-    "        'change_misc':0,\n",
-    "        'misc':0,\n",
-    "        'Offshore':0,\n",
-    "        'Land':0,\n",
+    "items = {'currentYear':currentYear,\n",
+    "         'total_int':Total_int,\n",
+    "         'total_int_change':Total_int_change,\n",
+    "         'last_month_int':Last_month_int,\n",
+    "         'last_month_year_int':Last_month_year_int,\n",
+    "        'lastYear_month_int':lastYear_month_int,\n",
+    "        'lastYear_year_int':lastYear_year_int,\n",
+    "        'last_year_count_int':Last_year_count_int,\n",
+    "        'current_month_int':current_month_int,\n",
+    "        'current_year_int':current_year_int,\n",
+    "        'change_oil':Oil_int_change,\n",
+    "        'oil':Oil_int,\n",
+    "        'change_gas':Gas_int_change,\n",
+    "        'gas':Gas_int,\n",
+    "        'change_misc':Misc_int_change,\n",
+    "        'misc':Misc_int,\n",
+    "        'Offshore':OS_int,\n",
+    "        'Land':Land_int,\n",
     "        'last_year_day':1,\n",
-    "        'last_year_month':0,\n",
+    "        'last_year_month':last_year_month,\n",
     "        'last_year':1,\n",
     "        'last_year_count_US':-1,\n",
-    "        'current_day_US':0,\n",
-    "        'current_month_US':0,\n",
-    "        'current_year_US':0,\n",
-    "        'last_day':0,\n",
-    "        'last_month':0,\n",
-    "        'last_week_count':0,\n",
-    "        'last_count_year':0,\n",
-    "        'total_US':0,\n",
-    "        'total_US_change':0,\n",
-    "        'USchange_oil':0,\n",
-    "        'USoil':0,\n",
-    "        'USchange_gas':0,\n",
-    "        'USgas':0,\n",
-    "        'USchange_misc':0,\n",
-    "        'USmisc':0,\n",
-    "        'USOffshore':0,\n",
-    "        'USLand':0,\n",
-    "        'USHD':0,\n",
-    "        'USVertical':0,\n",
-    "        'rigMin':0,\n",
-    "        'JanCount':0,\n",
-    "        'FebCount':0,\n",
-    "        'MarCount':0,\n",
-    "        'AprCount':0,\n",
-    "        'MayCount':0,\n",
-    "        'JunCount':0,\n",
-    "        'JulCount':0,\n",
-    "        'AugCount':0,\n",
-    "        'SepCount':0,\n",
-    "        'OctCount':0,\n",
-    "        'NovCount':0,\n",
-    "        'DecCount':0\n",
+    "        'current_day_US':current_day_US,\n",
+    "        'current_month_US':current_month_US,\n",
+    "        'current_year_US':current_year_US,\n",
+    "        'last_day':last_day,\n",
+    "        'last_month':last_month,\n",
+    "        'last_week_count':last_week_count,\n",
+    "        'last_count_year':last_count_year,\n",
+    "        'total_US':total_US,\n",
+    "        'total_US_change':total_US_change,\n",
+    "        'USchange_oil':USchange_oil,\n",
+    "        'USoil':USoil,\n",
+    "        'USchange_gas':USchange_gas,\n",
+    "        'USgas':USgas,\n",
+    "        'USchange_misc':USchange_misc,\n",
+    "        'USmisc':USmisc,\n",
+    "        'USOffshore':USOffshore,\n",
+    "        'USLand':USLand,\n",
+    "        'USHD':USHD,\n",
+    "        'USVertical':USVertical,\n",
+    "        'rigMin':150,\n",
+    "        'JanCount':JanCount,\n",
+    "        'FebCount':FebCount,\n",
+    "        'MarCount':MarCount,\n",
+    "        'AprCount':AprCount,\n",
+    "        'MayCount':MayCount,\n",
+    "        'JunCount':JunCount,\n",
+    "        'JulCount':JulCount,\n",
+    "        'AugCount':AugCount,\n",
+    "        'SepCount':SepCount,\n",
+    "        'OctCount':OctCount,\n",
+    "        'NovCount':NovCount,\n",
+    "        'DecCount':DecCount\n",
     "        }\n",
     "lines = {'currentYear':12,\n",
     "         'total_int':15,\n",
@@ -153,11 +387,11 @@
     "    return newValue\n",
     "\n",
     "items_list = list(items.keys())\n",
-    "print(items_list)\n",
+    "#\n",
     "for i in range(0,len(items_list)):\n",
     "    array[lines[items_list[i]]-1] = refresh(array,lines[items_list[i]]-1,items_list[i],str(items[items_list[i]]))\n",
     "\n",
-    "#will have to redefine line numbers once new spacing is used. (This may need to be adjusted)\n",
+    "#May have to redefine line numbers once new spacing is used.(unles original 7-4-2021 template is kept)\n",
     "with open('new.txt','w') as output:\n",
     "    for row in array:\n",
     "        val = \"\".join(map(str, row))\n",
@@ -169,24 +403,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'                [currentYear]2023[/currentYear]'"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d={'one':2023,'two':2}\n",
-    "refresh(testline,key,str(d['one']))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
